封装了登录请求模块 by Youwei

--- a/复盘项目中的一些问题.md
+++ b/复盘项目中的一些问题.md
@@ -36,4 +36,9 @@
    ```
 
    1. `@keyup.enter` 是一个按键修饰符，表示监听 `entet` 也就是回车键的抬起事件    `.native` 同样也是修饰符， 它的作用是表示监听组件的原生事件，我们使用 `<el-input/>` 将 `input` 进行了封装，而 `<el-input/>` 组件并没有给我们向外暴露出 `@keyup` 这个事件，而 `@keyup` 是 `input` 的原生事件，在这里写 `.native` 就表示的是 `@keyup` 是一个原生事件
+   
+4. 请求封装
+
+   1. `params` 为路径参数，查询参数，`get` 请求中使用
+   2. `data` 请求级参数
 
