配置相应拦截器 by Youwei

--- a/复盘项目中的一些问题.md
+++ b/复盘项目中的一些问题.md
@@ -42,3 +42,29 @@
    1. `params` 为路径参数，查询参数，`get` 请求中使用
    2. `data` 请求级参数
 
+5. vuex数据持久化存储token
+
+   1.初始化时从本地存储中读取数据，存入Vuex中
+
+   2.每当Vuex中的数据变化的时候，在同步给本地存储的缓存中，这样本地缓存和Vuex中的数据就可以实现双向同步
+
+6. 配置环境
+
+   1. 环境变量
+
+      1. 开发环境(development)
+
+      2. 生产环境(production)
+
+      3. 可以使用环境变量来配置当前时生产环境还是开发环境，环境变量可以通过 `process.env` 来取到
+
+         ```javascript
+         $ process.env.NODE_ENV # 当为 production时为生产环境 为 development时为开发环境
+         ```
+
+   2. 环境文件
+
+      可以在项目中使用文件的形式来配置环境，**`.env.development`** 为开发时的环境文件，**`.env.production`** 是生产时的环境文件，可以在文件中去定义变量，当我们执行 `npm run dev` 时，会自动去读取开发环境文件的值，当执行 `npm run build` 时会去读取生产环境文件的值 ，变量自动就为当前环境的值
+
+   
+
