完成自定义指令的创建

--- a/复盘项目中的一些问题.md
+++ b/复盘项目中的一些问题.md
@@ -66,5 +66,42 @@
 
       可以在项目中使用文件的形式来配置环境，**`.env.development`** 为开发时的环境文件，**`.env.production`** 是生产时的环境文件，可以在文件中去定义变量，当我们执行 `npm run dev` 时，会自动去读取开发环境文件的值，当执行 `npm run build` 时会去读取生产环境文件的值 ，变量自动就为当前环境的值
 
-   
+7. 关于自定义指令
 
+   本项目中创建一个关于图片失效后替换的自定义指令
+
+   ```javascript
+   // 关于自定义指令钩子函数详情，请移步文档  
+   // 指令对象 会在当前的dom元素插入到节点之后执行
+     inserted(dom, option) {
+       // 1.dom 表示当前指令作用的dom对象，dom在此时表示就是图片
+       // 2.option是指令中的变量的解释，它有一个属性叫 value
+       dom.onerror = function() {
+         // 当图片有地址，但是地址没有加载成功的时候，会报错，触发图片的一个事件 => onerror
+         // 当图片出现异常的时候，会讲指令配置的默认图片设置为该图片的内容
+         dom.ser = option.value
+       }
+     }
+   // 导入创建的所有自定义指令，*代表全部，赋值给 directives
+   import * as directives from '@/directives'
+   // 循环遍历所有属性
+   Object.keys(directives).forEach(key => {
+     // 注册自定义指令
+     Vue.directive(key, directives[key])
+   })
+   ```
+
+8. 新语法
+
+   ```javascript
+   // Object.keys()，会遍历整个对象，而后将对象的key属性以数组的形式返回
+   // 这个方法可以返回一个所有元素为字符串的数组
+       let obj = {
+         name: '1',
+         age: 19,
+         address: '北京'
+       }
+       console.log(Object.keys(obj))  // ["name", "age", "address"]
+   ```
+
+   
