token超时时间设置

--- a/复盘项目中的一些问题.md
+++ b/复盘项目中的一些问题.md
@@ -86,7 +86,7 @@
    import * as directives from '@/directives'
    // 循环遍历所有属性
    Object.keys(directives).forEach(key => {
-     // 注册自定义指令
+     // 注册自定义指令，指令名称为所有的元素名称，属性就是处理的函数体
      Vue.directive(key, directives[key])
    })
    ```
