分配权限回显完成 by Youwei

--- a/复盘项目中的一些问题.md
+++ b/复盘项目中的一些问题.md
@@ -104,4 +104,20 @@
        console.log(Object.keys(obj))  // ["name", "age", "address"]
    ```
 
+9. 生成二维码
+
+   ```javascript
+   // 安装插件 qrcode
+   // 1.导入插件 
+   import QrCode from 'qrcode'
+   // 2.使用 canvas 标签，注意需要绑定ref来拿到dom元素，后面会用到
+   <canvas ref="myCanvas" />
+   // 3.使用QrCode.toCanvas()方法
+   // 该方法接收两个参数，第一个参数是dom元素,第二个元素是需要生成二维码的元素，可以是文本，链接之类的
+   // 这个方法需要放在this.$nextTick()内等dom元素更新之后挂载    
+     this.$nextTick(() => {
+       QrCode.toCanvas(this.$refs.myCanvas, url)
+      })   
+   ```
+
    
